# book_optimize

./: CMakeLists.txt  main.cpp  remove_op.cpp
include/: testh.h
